--- a/options.html
+++ b/options.html
@@ -51,6 +51,14 @@
       <label>Save current URL in file:</label>
       <input type="checkbox" id="urlInFile" />
     </div>
+    <div class="option">
+      <label>Save current Webpage title in file:</label>
+      <input type="checkbox" id="titleInFile" />
+    </div>
+    <div class="option">
+      <label>Save current Date in file:</label>
+      <input type="checkbox" id="dateInFile" />
+    </div>
 
     <h3> Save behaviour </h3>
     <div class="option">
