--- a/options.html
+++ b/options.html
@@ -56,7 +56,7 @@
       <input type="checkbox" id="titleInFile" />
     </div>
     <div class="option">
-      <label>Save current Date in file:</label>
+      <label>Save current Date and Time in file:</label>
       <input type="checkbox" id="dateInFile" />
     </div>
 
@@ -68,6 +68,13 @@
     <div class="option">
       <label>Show notifications:</label>
       <input type="checkbox" id="notifications" checked />
+    </div>
+    <div class="option">
+      <label>Save file as:</label>
+      <select id="fileFormat">
+        <option value="txt">txt</option>
+        <option value="html">html</option>
+       </select>
     </div>
     <div class="option">
       <label>If file exists:</label>
